--- a/jade/page/persiandate.jade
+++ b/jade/page/persiandate.jade
@@ -6,7 +6,7 @@ block style
   link(rel='stylesheet', href='js/prettify/theme/desert.css')
 
 block scripts
-  script(src='https://rawgithub.com/babakhani/PersianDate/Develop/pwt-date.js')
+  script(src='http://rawgithub.com/babakhani/PersianDate/Develop/pwt-date.js')
   script(src='js/prettify/prettify.js')
 
 
