--- a/jade/includes/datepicker.html
+++ b/jade/includes/datepicker.html
@@ -1,7 +1,7 @@
 <script type="text/javascript" >
-      $(document).ready(function() {
-            prettyPrint();
-      })
+  $(document).ready(function() {
+    prettyPrint();
+  })
 </script>
 
 <div class="page-title-box" >
@@ -11,42 +11,40 @@
 		This Date picker work with Iranian calendar .
 	</p>
 	<p>
+		<span>More info  at</span>
+		<a target="blank" href="http://en.wikipedia.org/wiki/Iranian_calendar" >http://en.wikipedia.org/wiki/Iranian_calendar</a>
+	</p>
+	<p>
 		<a href="https://github.com/babakhani/pwt.datepicker" >Project on github</a>
 	</p>
 	<p>
 		<a href="http://plugins.jquery.com/pwt.datepicker/" >Project on Jquery</a>
 	</p>
-	
-	
-	<span>More info  at</span>
-	<a target="blank" href="http://en.wikipedia.org/wiki/Iranian_calendar" >http://en.wikipedia.org/wiki/Iranian_calendar</a>
-	<br/>
-	<h3>Dependency </h3>
-	<a href="http://jquery.org"  >jquery.js</a>1.4 &#62;
-	<br/>
+
+	<p>
+		<a class="direct-source-link" target="blank"  href="http://rawgithub.com/babakhani/pwt.datepicker/master/js/pwt-datepicker.js" ><b>pwt-datepicker.js</b> 52 kb</a>
+		<a class="direct-source-link" target="blank"  href="http://rawgithub.com/babakhani/pwt.datepicker/master/js/pwt-datepicker.min.js" ><b>pwt-datepicker.min.js </b>24 kb</a>
+	</p>
+	<p>
+		<br/>
+		<h3>Dependency </h3>
+		<br/>
+		<a href="http://jquery.org"  >jquery.js</a>1.4 &#62;
+	</p>
 	Client Side Persain Date library :
 	<br/>
 	<a href="js/pwt-date.js" download="pwt-date.js" >pwt.date.js </a>0.1.6 &#62;
 	<br/>
 	<h3>Fiddle Example</h3>
-	<a target="blank" href="http://jsfiddle.net/babareza/DqppC/1/" >Simple Initialize</a> | 
-	<a target="blank" href="http://jsfiddle.net/babareza/PAg54/" >Custom Format</a> |
-	<a target="blank" href="http://jsfiddle.net/babareza/z3G2q/" >Formatter Function</a> | 
-	<a target="blank" href="http://jsfiddle.net/babareza/Gm7eM/" >Alt Field</a> | 
-	<a target="blank" href="http://jsfiddle.net/babareza/wjfNG/ " >Engilsh Number</a> | 
-	<a target="blank" href="http://jsfiddle.net/babareza/dAhEa/" >Custom Position</a> |
-	<a target="blank" href="http://jsfiddle.net/babareza/Vx5TG/" >Custom View Mode</a>
+	<a target="blank" href="http://jsfiddle.net/babareza/DqppC/1/" >Simple Initialize</a> | <a target="blank" href="http://jsfiddle.net/babareza/PAg54/" >Custom Format</a> | <a target="blank" href="http://jsfiddle.net/babareza/z3G2q/" >Formatter Function</a> | <a target="blank" href="http://jsfiddle.net/babareza/Gm7eM/" >Alt Field</a> | <a target="blank" href="http://jsfiddle.net/babareza/wjfNG/ " >Engilsh Number</a> | <a target="blank" href="http://jsfiddle.net/babareza/dAhEa/" >Custom Position</a> | <a target="blank" href="http://jsfiddle.net/babareza/Vx5TG/" >Custom View Mode</a>
 	<br/>
 </div>
 <div class="download-box" >
-		<a class="download-item"  href="https://github.com/babakhani/pwt.datepicker/archive/master.zip" >
-			<span class="download-zip"  ></span>
-			<span class="download-zip-title" >Download Zip <span class="download-info" >From Github</span></span>		
-		</a>
-		<div class="page-git-star-btn" >
-			<iframe src="http://ghbtns.com/github-btn.html?user=babakhani&repo=pwt.datepicker&type=watch&count=false" allowtransparency="true" frameborder="0" scrolling="0" width="55px" height="20px"></iframe>
+	<a class="download-item"  href="https://github.com/babakhani/pwt.datepicker/archive/master.zip" > <span class="download-zip"  ></span> <span class="download-zip-title" >Download Zip <span class="download-info" >From Github</span></span> </a>
+	<div class="page-git-star-btn" >
+		<iframe src="http://ghbtns.com/github-btn.html?user=babakhani&repo=pwt.datepicker&type=watch&count=false" allowtransparency="true" frameborder="0" scrolling="0" width="55px" height="20px"></iframe>
 	</div>
-	
+
 </div>
 <br/>
 <br/>
@@ -59,11 +57,11 @@
 	<div class="well">
 		<input  type="text" class="sample-input " value="02-16-2012" id="example1"  >
 		<script type="text/javascript" >
-                  $(document).ready(function() {
-                        $("#example1").pDatepicker({
+      $(document).ready(function() {
+        $("#example1").pDatepicker({
 
-                        });
-                  });
+        });
+      });
 		</script>
 
 	</div>
@@ -82,7 +80,7 @@
             		});
 		&lt;/script&gt;
 		&lt;input type="text" class="example1" /&gt;
-	</pre>
+	</pre>	
 	
 	
 	
@@ -98,7 +96,7 @@
 		</thead>
 		<tbody>
 			<tr>
-				<td>format <span class="minor-version" >0.0.4</span> </td>
+				<td>format <span class="minor-version" >0.0.4</span></td>
 				<td>string</td>
 				<td>'mm/dd/yyyy'</td>
 				<td>the date format, combination of  d, dd, m, mm, yy, yyy.</td>
@@ -116,21 +114,20 @@
 				...} </td>
 			</tr>
 			<tr>
-				<td>altField <span class="minor-version" >0.0.4</span> </td>
+				<td>altField <span class="minor-version" >0.0.4</span></td>
 				<td>selector string</td>
 				<td>false</td>
 				<td>An input element that is to be updated with the selected date from the datepicker. Use the altFormat option to change the format of the date within this field. Leave as blank for no alternate field.
-					acceptable value: : '#elementId','.element-class'</td>
+				acceptable value: : '#elementId','.element-class'</td>
 			</tr>
 			<tr>
-				<td>altFormat <span class="minor-version" >0.0.4</span> </td>
+				<td>altFormat <span class="minor-version" >0.0.4</span></td>
 				<td>String</td>
 				<td>unix</td>
-				<td>The <a target="_blank " href="http://babakhani.github.io/PersianWebToolkit/persiandate#/displaying/format/" >dateFormat</a>
-					 to be used for the altField option. acceptable value: <strong>unix,gregorian,g,u,YYYY/mMM/DD</strong></td>
+				<td>The <a target="_blank " href="http://babakhani.github.io/PersianWebToolkit/persiandate#/displaying/format/" >dateFormat</a> to be used for the altField option. acceptable value: <strong>unix,gregorian,g,u,YYYY/mMM/DD</strong></td>
 			</tr>
 			<tr>
-				<td>altFieldFormatter <span class="minor-version" >0.0.4</span> </td>
+				<td>altFieldFormatter <span class="minor-version" >0.0.4</span></td>
 				<td>Function</td>
 				<td>--</td>
 				<td>format value of  'altField' input
@@ -142,25 +139,25 @@
 				...} </td>
 			</tr>
 			<tr>
-				<td>observer <span class="minor-version" >0.0.4</span> </td>
+				<td>observer <span class="minor-version" >0.0.4</span></td>
 				<td>Boolean</td>
 				<td>false</td>
 				<td>if you use $(element).val() to set input val and 'observer : true' , datepicker sync with your  inputed Value. Observer Watch input and altField Elemets.</td>
 			</tr>
 			<tr>
-				<td>onShow <span class="minor-version" >0.0.4</span> </td>
+				<td>onShow <span class="minor-version" >0.0.4</span></td>
 				<td>Function</td>
 				<td>--</td>
 				<td>A function that takes current datepicker instance. It is called just before the datepicker is displayed.</td>
 			</tr>
 			<tr>
-				<td>onHide <span class="minor-version" >0.0.4</span> </td>
+				<td>onHide <span class="minor-version" >0.0.4</span></td>
 				<td>Function</td>
 				<td>--</td>
 				<td>A function that takes current datepicker instance. It is called just before the datepicker Hide.</td>
 			</tr>
 			<tr>
-				<td>onSelect<span class="minor-version" >0.0.4</span> </td>
+				<td>onSelect<span class="minor-version" >0.0.4</span></td>
 				<td>Function</td>
 				<td>--</td>
 				<td>A function that takes current datepicker unixDate. It is called When Day Select.</td>
@@ -195,9 +192,9 @@
 				<td>true</td>
 				<td>Show Hide toolbox element </td>
 			</tr>
-			
+
 			<tr>
-				<td>viewFormatter<span class="deprecated-version" >Deprecated In 0.0.4</span> </td>
+				<td>viewFormatter<span class="deprecated-version" >Deprecated In 0.0.4</span></td>
 				<td>Function</td>
 				<td>--</td>
 				<td>format value of input
@@ -209,19 +206,19 @@
 				...} </td>
 			</tr>
 			<tr>
-				<td>viewFormat <span class="deprecated-version" >Deprecated In 0.0.4</span> </td>
+				<td>viewFormat <span class="deprecated-version" >Deprecated In 0.0.4</span></td>
 				<td>string</td>
 				<td>'mm/dd/yyyy'</td>
 				<td>the date format, combination of  d, dd, m, mm, yy, yyy.</td>
 			</tr>
 			<tr>
-				<td>mask<span class="deprecated-version" >Deprecated In 0.0.4</span> </td>
+				<td>mask<span class="deprecated-version" >Deprecated In 0.0.4</span></td>
 				<td>String | Intger</td>
 				<td>false</td>
 				<td>If Mask Set Datepicker add input hidden whit name of main input and set value for this on select date, acceptable value: <strong>unix,gregorian</strong></td>
 			</tr>
 			<tr>
-				<td>maskFormatter<span class="deprecated-version" >Deprecated In 0.0.4</span> </td>
+				<td>maskFormatter<span class="deprecated-version" >Deprecated In 0.0.4</span></td>
 				<td>Function</td>
 				<td>--</td>
 				<td>format value of mask input
@@ -232,7 +229,7 @@
 				<br/>
 				...} </td>
 			</tr>
-			
+
 		</tbody>
 	</table>
 	<h3>Methods</h3>
@@ -247,25 +244,24 @@
 		</thead>
 		<tbody>
 			<tr>
-				<td>show() <span class="minor-version" >0.0.4</span> </td>
+				<td>show() <span class="minor-version" >0.0.4</span></td>
 				<td>This method does not accept any arguments.</td>
 				<td>Open the date picker.</td>
-				<td><pre  class="prettyprint lang-html" >$( ".selector" ).datepicker( "show" );</pre></td>
+				<td>				<pre  class="prettyprint lang-html" >$( ".selector" ).datepicker( "show" );</pre></td>
 			</tr>
 			<tr>
-				<td>hide() <span class="minor-version" >0.0.4</span> </td>
+				<td>hide() <span class="minor-version" >0.0.4</span></td>
 				<td>This method does not accept any arguments.</td>
 				<td>Close the date picker.</td>
-				<td><pre  class="prettyprint lang-html" >$( ".selector" ).datepicker( "hide" );</pre></td>
+				<td>				<pre  class="prettyprint lang-html" >$( ".selector" ).datepicker( "hide" );</pre></td>
 			</tr>
 			<tr>
-				<td>destroy <span class="minor-version" >0.0.4</span> </td>
+				<td>destroy <span class="minor-version" >0.0.4</span></td>
 				<td>This method does not accept any arguments.</td>
 				<td>Removes the datepicker functionality completely. </td>
-				<td><pre  class="prettyprint lang-html" >$( ".selector" ).datepicker( "destroy" );</pre></td>
+				<td>				<pre  class="prettyprint lang-html" >$( ".selector" ).datepicker( "destroy" );</pre></td>
 			</tr>
-			
-			
+
 		</tbody>
 	</table>
 </div>
