--- a/jade/includes/persiandate.doc.html
+++ b/jade/includes/persiandate.doc.html
@@ -13,12 +13,18 @@
 		Inspired by <a href="http://momentjs.com/" >moment.js</a>
 	</p>
 	<p>
+	<span>More info  at </span><a target="blank" href="http://en.wikipedia.org/wiki/Iranian_calendar" >http://en.wikipedia.org/wiki/Iranian_calendar</a>
+	</p>
+	<p>
 		<a href="./persian-date-tests.html" >Tests</a>
 	</p>
 	<p>
 		<a href="https://github.com/babakhani/PersianDate" >Project on github</a>
 	</p>
-	<span>More info  at </span><a target="blank" href="http://en.wikipedia.org/wiki/Iranian_calendar" >http://en.wikipedia.org/wiki/Iranian_calendar</a>
+	<p>
+		<a class="direct-source-link" target="blank"  href="http://rawgithub.com/babakhani/PersianDate/master/pwt-date.js" ><b>pwt-date.js</b> 54 kb</a>
+		<a class="direct-source-link" target="blank"  href="http://rawgithub.com/babakhani/PersianDate/master/pwt-date.min.js" ><b>pwt-date.min.js </b>14 kb</a>
+	</p>
 </div>
 <div class="download-box" >
 	<a class="download-item"  href="https://github.com/babakhani/PersianDate/archive/master.zip" > <span class="download-zip"  ></span> <span class="download-zip-title" >Download Zip <span class="download-info" >From Github</span></span> </a>
