--- a/jade/page/datepicker.jade
+++ b/jade/page/datepicker.jade
@@ -9,8 +9,8 @@ block style
   
 
 block scripts
-   script(src='https://rawgithub.com/babakhani/PersianDate/master/pwt-date.js')
-   script(src='https://rawgithub.com/babakhani/pwt.datepicker/master/js/pwt-datepicker.js')
+   script(src='http://rawgithub.com/babakhani/PersianDate/master/pwt-date.js')
+   script(src='http://rawgithub.com/babakhani/pwt.datepicker/master/js/pwt-datepicker.js')
    
    script(src='js/prettify/prettify.js')
    
