--- a/jade/includes/datepicker.html
+++ b/jade/includes/datepicker.html
@@ -36,7 +36,7 @@
 	<a href="js/pwt-date.js" download="pwt-date.js" >pwt.date.js </a>0.1.6 &#62;
 	<br/>
 	<h3>Fiddle Example</h3>
-	<a target="blank" href="http://jsfiddle.net/babareza/DqppC/1/" >Simple Initialize</a> | <a target="blank" href="http://jsfiddle.net/babareza/PAg54/" >Custom Format</a> | <a target="blank" href="http://jsfiddle.net/babareza/z3G2q/" >Formatter Function</a> | <a target="blank" href="http://jsfiddle.net/babareza/Gm7eM/" >Alt Field</a> | <a target="blank" href="http://jsfiddle.net/babareza/wjfNG/ " >Engilsh Number</a> | <a target="blank" href="http://jsfiddle.net/babareza/dAhEa/" >Custom Position</a> | <a target="blank" href="http://jsfiddle.net/babareza/Vx5TG/" >Custom View Mode</a>
+	<a target="blank" href="http://jsfiddle.net/babareza/DqppC/" >Simple Initialize</a> | <a target="blank" href="http://jsfiddle.net/babareza/PAg54/" >Custom Format</a> | <a target="blank" href="http://jsfiddle.net/babareza/z3G2q/" >Formatter Function</a> | <a target="blank" href="http://jsfiddle.net/babareza/Gm7eM/" >Alt Field</a> | <a target="blank" href="http://jsfiddle.net/babareza/wjfNG/ " >Engilsh Number</a> | <a target="blank" href="http://jsfiddle.net/babareza/dAhEa/" >Custom Position</a> | <a target="blank" href="http://jsfiddle.net/babareza/Vx5TG/" >Custom View Mode</a>
 	<br/>
 </div>
 <div class="download-box" >
