Add bower installation

--- a/jade/page/layout.jade
+++ b/jade/page/layout.jade
@@ -1,4 +1,4 @@
-!!! transitional
+doctype transitional
 html( xmlns = "http://www.w3.org/1999/xhtml", lang = "en", 'xml:lang' = "en" )
   title Persian Web Toolkit
   head
