add npm install doc

--- a/jade/includes/persiandate.doc.html
+++ b/jade/includes/persiandate.doc.html
@@ -56,7 +56,7 @@
 
     <div class="prose">
         <div class="highlight">
-			<pre>bower install persian-date</pre>
+			<pre>bower install persian-date <br>npm install persian-date</pre>
         </div>
     </div>
 </article>
