--- a/jade/includes/head.jade
+++ b/jade/includes/head.jade
@@ -1,4 +1,4 @@
-link(rel='stylesheet', href='css/pages.css')
+link(rel='stylesheet', href='/css/pages.css')
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 <link rel="canonical" href="http://babakhani.github.io/PersianWebToolkit" />
 <meta name="description" content="javascript,datepicker,date,persian,calendar">
