--- a/jade/includes/homepage.html
+++ b/jade/includes/homepage.html
@@ -1,20 +1,24 @@
 <br/>
 <br/>
-<div class="home-page-logo" ></div>
-<p >
-	Some Ui Tools Compatible With Persian Layout And <a target="_blank" href="http://en.wikipedia.org/wiki/Jalali_calendar" >Jalali Calendar</a>
+<div class="home-page-logo"></div>
+<p>
+    Some Ui Tools Compatible With Persian Layout And <a target="_blank"
+                                                        href="http://en.wikipedia.org/wiki/Jalali_calendar">Jalali
+    Calendar</a>
 </p>
 <ul>
-	<li>
-		<a href="http://babakhani.github.io/PersianWebToolkit/persiandate"> Persian Date</a>
-		<p>
-			javascript date library for parsing, validating, manipulating, and formatting persian dates System.
-		</p>
-	</li>
-	<li>
-		<a href="http://babakhani.github.io/PersianWebToolkit/datepicker"> Persian Date Picker</a>
-		<p>
-			jquery datepicker plugin work with Iranian calendar
-		</p>
-	</li>
+    <li>
+        <a href="doc/persiandate/version.html"> Persian Date</a>
+
+        <p>
+            javascript date library for parsing, validating, manipulating, and formatting persian dates System.
+        </p>
+    </li>
+    <li>
+        <a href="doc/datepicker/version.html"> Persian Date Picker</a>
+
+        <p>
+            jquery datepicker plugin work with Iranian calendar
+        </p>
+    </li>
 </ul>
