--- a/jade/includes/page.header.html
+++ b/jade/includes/page.header.html
@@ -1,16 +1,16 @@
 <div id="header_wrap" class="outer">
-	<header class="inner">
-		<a href="http://babakhani.github.io/PersianWebToolkit/" >
-			<div class="page-logo" ></div>
-			<h3 id="project_title">Persian Web Toolkit</h3>
-		</a>
-		<ul id="pageHeaderMenu" class="page-header-menu" >
-			<li>
-				<a projectName="persiandate" href="persiandate.html" >Persian Date</a>
-			</li>
-			<li>
-				<a  projectName="datepicker" href="datepicker.html" >Datepicker</a>
-			</li>
-		</ul>
-	</header>
+    <header class="inner">
+        <a href="/">
+            <div class="page-logo"></div>
+            <h3 id="project_title">Persian Web Toolkit</h3>
+        </a>
+        <ul id="pageHeaderMenu" class="page-header-menu">
+            <li>
+                <a projectName="persiandate" href="/doc/persiandate/version.html">Persian Date</a>
+            </li>
+            <li>
+                <a projectName="datepicker" href="/doc/datepicker/version.html">Datepicker</a>
+            </li>
+        </ul>
+    </header>
 </div>
