--- a/jade/includes/head.script.html
+++ b/jade/includes/head.script.html
@@ -1,2 +1,2 @@
-<script src="/js/jquery.js"></script>
-<script src="/js/main.js"></script>
+<script src="/PersianWebToolkit/js/jquery.js"></script>
+<script src="/PersianWebToolkit/js/main.js"></script>
