--- a/jade/includes/homepage.html
+++ b/jade/includes/homepage.html
@@ -8,14 +8,14 @@
 </p>
 <ul>
     <li>
-        <a href="doc/persiandate/version.html"> Persian Date</a>
+        <a href="/PersianWebToolkit/doc/persiandate/version.html"> Persian Date</a>
 
         <p>
             javascript date library for parsing, validating, manipulating, and formatting persian dates System.
         </p>
     </li>
     <li>
-        <a href="doc/datepicker/version.html"> Persian Date Picker</a>
+        <a href="/PersianWebToolkit/doc/datepicker/version.html"> Persian Date Picker</a>
 
         <p>
             jquery datepicker plugin work with Iranian calendar
