--- a/jade/includes/page.header.html
+++ b/jade/includes/page.header.html
@@ -6,10 +6,10 @@
         </a>
         <ul id="pageHeaderMenu" class="page-header-menu">
             <li>
-                <a projectName="persiandate" href="/doc/persiandate/version.html">Persian Date</a>
+                <a projectName="persiandate" href="/PersianWebToolkit/doc/persiandate/version.html">Persian Date</a>
             </li>
             <li>
-                <a projectName="datepicker" href="/doc/datepicker/version.html">Datepicker</a>
+                <a projectName="datepicker" href="/PersianWebToolkit/doc/datepicker/version.html">Datepicker</a>
             </li>
         </ul>
     </header>
