--- a/jade/page/datepicker.jade
+++ b/jade/page/datepicker.jade
@@ -2,17 +2,17 @@ extends layout
 
 block style
 
-  link(rel='stylesheet', href='/css/datepicker.css')
-  link(rel='stylesheet', href='/css/pwt-datepicker.css')
+  link(rel='stylesheet', href='/PersianWebToolkit/css/datepicker.css')
+  link(rel='stylesheet', href='/PersianWebToolkit/css/pwt-datepicker.css')
 
-  link(rel='stylesheet', href='/js/prettify/theme/desert.css')
+  link(rel='stylesheet', href='/PersianWebToolkit/js/prettify/theme/desert.css')
 
 
 block scripts
    script(src='http://rawgithub.com/babakhani/PersianDate/master/pwt-date.js')
    script(src='http://rawgithub.com/babakhani/pwt.datepicker/master/js/pwt-datepicker.js')
 
-   script(src='/js/prettify/prettify.js')
+   script(src='/PersianWebToolkit/js/prettify/prettify.js')
 
 
 block content
