--- a/jade/page/persiandate.jade
+++ b/jade/page/persiandate.jade
@@ -1,13 +1,13 @@
 extends layout
 
 block style
-  link(rel='stylesheet', href='/css/menu.css')
-  link(rel='stylesheet', href='/css/datepicker.css')
-  link(rel='stylesheet', href='/js/prettify/theme/desert.css')
+  link(rel='stylesheet', href='/PersianWebToolkit/css/menu.css')
+  link(rel='stylesheet', href='/PersianWebToolkit/css/datepicker.css')
+  link(rel='stylesheet', href='/PersianWebToolkit/js/prettify/theme/desert.css')
 
 block scripts
   script(src='http://rawgithub.com/babakhani/PersianDate/Develop/pwt-date.js')
-  script(src='/js/prettify/prettify.js')
+  script(src='/PersianWebToolkit/js/prettify/prettify.js')
 
 
 block menu 
