--- a/jade/includes/page.header.html
+++ b/jade/includes/page.header.html
@@ -1,6 +1,6 @@
 <div id="header_wrap" class="outer">
     <header class="inner">
-        <a href="/">
+        <a href="/PersianWebToolkit">
             <div class="page-logo"></div>
             <h3 id="project_title">Persian Web Toolkit</h3>
         </a>
