Add new Version doc

--- a/jade/includes/persiandate-doc-0.1.7.html
+++ b/jade/includes/persiandate-doc-0.1.7.html
@@ -1,151 +1,59 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><title>Persian Web Toolkit</title><head><meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-<link rel="canonical" href="http://babakhani.github.io/PersianWebToolkit" />
-<meta name="description" content="javascript,datepicker,date,persian,calendar"><meta name="keyword" content="persian,datepicker,date,khayam,jalali,reza,babakhani,jquery,plugin,javascript,js,persian web toolkit,pwt"/><link rel="shortcut icon" href="img/favicon.png"/><link rel="stylesheet" href="/PersianWebToolkit/css/menu.css"/><link rel="stylesheet" href="/PersianWebToolkit/lib/prettify/theme/desert.css"/><link rel="stylesheet" href="/PersianWebToolkit/lib/bootstrap/css/bootstrap.css"/><link rel="stylesheet" href="/PersianWebToolkit/css/pages.css"/><script src="/PersianWebToolkit/lib/jquery/jquery-1.11.2.js"></script><script src="/PersianWebToolkit/lib/prettify/prettify.js"></script><script src="/PersianWebToolkit/lib/bootstrap/js/bootstrap.js"></script><script src="/PersianWebToolkit/lib/persian-date-0.1.8b.js"></script><script src="/PersianWebToolkit/js/main.js"></script></head><body><div id="header_wrap" class="outer">
-    <header class="inner">
-        <a href="/PersianWebToolkit">
-            <div class="page-logo"></div>
-            <h3 id="project_title">Persian Web Toolkit</h3>
-        </a>
-        <ul id="pageHeaderMenu" class="page-header-menu">
-            <li>
-                <a projectName="persiandate" href="/PersianWebToolkit/doc/persiandate/version.html">Persian Date</a>
-            </li>
-            <li>
-                <a projectName="datepicker" href="/PersianWebToolkit/doc/datepicker/version.html">Datepicker</a>
-            </li>
-        </ul>
-    </header>
-</div>
-<div class="page-menu" >
-	<div class="inner"  >
-<nav class="subnav inner" >
-	<div class="section">
-		<a href="#/parsing/">Parse</a>
-		<div class="dropdown">
-			<a href="#/parsing/now/">Now</a>
-			<a href="#/parsing/unix-offset/">Unix Offset (milliseconds)</a>
-			<a href="#/parsing/unix-timestamp/">Unix Timestamp (seconds)</a>
-			<a href="#/parsing/date/">Date</a>
-			<a href="#/parsing/array/">Array</a>
-			<a href="#/parsing/clone/">PersianDate Clone</a>
-			<a href="#/parsing/asp-net-json-date/">ASP.NET JSON Date</a>
-		</div>
-	</div>
-	<div class="section">
-		<a href="#/get-set/">Get + Set</a>
-		<div class="dropdown">
 
-			<a href="#/get-set/millisecond/">Millisecond</a>
 
-			<a href="#/get-set/second/">Second</a>
+<div class="row">
+    <div class="col-xs-8 ">
+        <h1>Persian Date</h1>
+        <span class="label label-warning">Beta Version 0.1.7</span>
 
-			<a href="#/get-set/minute/">Minute</a>
+        <h2> javascript date library for parsing, validating, manipulating, and formatting <strong>persian
+            dates</strong>
+            System. </h2>
 
-			<a href="#/get-set/hour/">Hour</a>
+        <p>
+            Inspired by <a href="http://momentjs.com/">moment.js</a>
+        </p>
 
-			<a href="#/get-set/date/">Date of Month</a>
+        <p>
+            <span>More info  at </span><a target="blank" href="http://en.wikipedia.org/wiki/Iranian_calendar">http://en.wikipedia.org/wiki/Iranian_calendar</a>
+        </p>
 
-			<a href="#/get-set/day/">Day of Week</a>
-			<a href="#/get-set/month/">Month</a>
+        <p>
+            <a href="./persian-date-tests.html">Tests</a>
+        </p>
 
-			<a href="#/get-set/year/">Year</a>
+        <p>
+            <a href="https://github.com/babakhani/PersianDate">Project on github</a>
+        </p>
 
-		</div>
-	</div>
+        <p>
+            <a class="direct-source-link" target="blank"
+               href="http://rawgithub.com/babakhani/PersianDate/master/pwt-date.js"><b>pwt-date.js</b> 54 kb</a>
+            <a class="direct-source-link" target="blank"
+               href="http://rawgithub.com/babakhani/PersianDate/master/pwt-date.min.js"><b>pwt-date.min.js </b>14 kb</a>
+            <span class="direct-source-link"><b>Minify and GZip </b>4 kb</span>
+        </p>
+    </div>
 
-	<div class="section">
-		<a href="#/manipulating/">Manipulate</a>
-		<div class="dropdown">
-
-			<a href="#/manipulating/add/">Add</a>
-
-			<a href="#/manipulating/subtract/">Subtract</a>
-
-			<a href="#/manipulating/start-of/">Start of Time</a>
-
-			<a href="#/manipulating/end-of/">End of Time</a>
-		
-		</div>
-	</div>
-
-	<div class="section">
-		<a href="#/displaying/">Display</a>
-		<div class="dropdown">
-			<a href="#/displaying/format/">Format</a>
-			<a href="#/displaying/formatPersian/">Format To Persian</a>
-			<a href="#/displaying/difference/">Difference</a>
-			<a href="#/displaying/unix-offset/">Unix Offset (milliseconds)</a>
-			<a href="#/displaying/unix-timestamp/">Unix Timestamp (seconds)</a>
-			<a href="#/displaying/timezone-offset/">Timezone Offset</a>
-			<a href="#/displaying/days-in-month/">Days in Month</a>
-			<a href="#/displaying/as-javascript-date/">As Javascript Date</a>
-			<a href="#/displaying/as-array/">As Array</a>
-		</div>
-	</div>
-
-	<div class="section">
-		
-		<a href="#/query/">Query</a>
-		<div class="dropdown">
-			<a href="#/query/is-leap-year/">Is Leap Year</a>
-			<a href="#/query/is-daylight-saving-time/">Is Daylight Saving Time</a>
-			<a href="#/query/is-a-persianDate/">Is a persianDate</a>
-
-		</div>
-	</div>
-
-</nav>
-</div>
-</div><div id="main_content_wrap" class="outer"><div id="main_content_wrap" class="outer"><section id="main_content" class="inner"><script type="text/javascript">
-    $(document).ready(function () {
-        $("pre").addClass("prettyprint");
-        prettyPrint();
-    })
-</script>
-
-<div class="page-title-box">
-    <h1>Persian Date</h1>
-    <h6 class="warning-version">Beta Version 0.1.7</h6>
-
-    <h2> javascript date library for parsing, validating, manipulating, and formatting <strong>persian dates</strong>
-        System. </h2>
-
-    <p>
-        Inspired by <a href="http://momentjs.com/">moment.js</a>
-    </p>
-
-    <p>
-        <span>More info  at </span><a target="blank" href="http://en.wikipedia.org/wiki/Iranian_calendar">http://en.wikipedia.org/wiki/Iranian_calendar</a>
-    </p>
-
-    <p>
-        <a href="./persian-date-tests.html">Tests</a>
-    </p>
-
-    <p>
-        <a href="https://github.com/babakhani/PersianDate">Project on github</a>
-    </p>
-
-    <p>
-        <a class="direct-source-link" target="blank"
-           href="http://rawgithub.com/babakhani/PersianDate/master/pwt-date.js"><b>pwt-date.js</b> 54 kb</a>
-        <a class="direct-source-link" target="blank"
-           href="http://rawgithub.com/babakhani/PersianDate/master/pwt-date.min.js"><b>pwt-date.min.js </b>14 kb</a>
-        <span class="direct-source-link"><b>Minify and GZip </b>4 kb</span>
-    </p>
-</div>
-<div class="download-box">
-    <a class="download-item" href="https://github.com/babakhani/PersianDate/archive/master.zip"> <span
-            class="download-zip"></span> <span class="download-zip-title">Download Zip <span class="download-info">From Github</span></span>
-    </a>
-
-    <div class="page-git-star-btn">
-        <iframe src="http://ghbtns.com/github-btn.html?user=babakhani&repo=PersianDate&type=watch&count=false"
-                allowtransparency="true" frameborder="0" scrolling="0" width="55px" height="20px"></iframe>
+    <div class="col-xs-4">
+        <div class="page-git-star-btn">
+            <div>
+                <iframe src="http://ghbtns.com/github-btn.html?user=babakhani&repo=PersianDate&type=watch&count=true&size=small"
+                        height="30" width="170" frameborder="0" scrolling="0" style="width:170px; height: 30px;"
+                        allowTransparency="true"></iframe>
+            </div>
+            <div>
+                <iframe src="http://ghbtns.com/github-btn.html?user=babakhani&repo=PersianDate&type=fork&count=true&size=small"
+                        height="30" width="170" frameborder="0" scrolling="0" style="width:170px; height: 30px;"
+                        allowTransparency="true"></iframe>
+            </div>
+            <a class="download-item" href="https://github.com/babakhani/PersianDate/archive/master.zip"> <span
+                    class="download-zip"></span> <span class="download-zip-title">Download Zip <span
+                    class="download-info">From Github</span></span>
+            </a>
+            </a>
+        </div>
     </div>
 </div>
-
-<br/>
 
 <article class="method">
     <a class="target" name="/use-it/browser/"></a>
@@ -154,7 +62,7 @@
 
     <div class="prose">
         <div class="highlight">
-			<pre>bower install persian-date <br>npm install persian-date</pre>
+            <pre>bower install persian-date <br>npm install persian-date</pre>
         </div>
     </div>
 </article>
@@ -1519,13 +1427,3 @@ persianDate().isPersianDate(persianDate()) // true
     </div>
 </article>
 
-</section></div></div><div id="footer_wrap" class="outer"><footer class="inner"><p class="copyright">Persian Web Toolkit maintained by<a href="https://github.com/babakhani"> Reza Babakhani</a><script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try{
-var pageTracker = _gat._getTracker("UA-40548780-1");
-pageTracker._trackPageview();
-} catch(err) {}
-</script></p></footer></div></body></html>
