--- a/jade/page/persiandate-0.1.7.jade
+++ b/jade/page/persiandate-0.1.7.jade
@@ -1,6 +1,6 @@
 extends layout
 
-block menu 
+block menu
     include ../includes/persiandate.menu.html
 
 
@@ -8,4 +8,4 @@ block menu
 block content
  #main_content_wrap.outer
       section#main_content.inner
-        include ../includes/persiandate.doc.html
+        include ../includes/persiandate-doc-0.1.7.html
