--- a/jade/includes/page.header.html
+++ b/jade/includes/page.header.html
@@ -1,16 +1,30 @@
-<div id="header_wrap" class="outer">
-    <header class="inner">
-        <a href="/PersianWebToolkit">
-            <div class="page-logo"></div>
-            <h3 id="project_title">Persian Web Toolkit</h3>
-        </a>
-        <ul id="pageHeaderMenu" class="page-header-menu">
-            <li>
-                <a projectName="persiandate" href="/PersianWebToolkit/doc/persiandate/version.html">Persian Date</a>
-            </li>
-            <li>
-                <a projectName="datepicker" href="/PersianWebToolkit/doc/datepicker/version.html">Datepicker</a>
-            </li>
-        </ul>
-    </header>
-</div>
+<!-- Fixed navbar -->
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a href="/PersianWebToolkit" class="navbar-brand">
+                <div class="page-logo"></div>
+                Persian Web Toolkit
+            </a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li>
+                    <a projectName="persiandate" href="/PersianWebToolkit/doc/persiandate/version.html">Persian Date</a>
+                </li>
+                <li >
+                    <a href="/PersianWebToolkit/doc/datepicker/version.html" >
+                        Datepicker
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
