--- a/jade/page/layout.jade
+++ b/jade/page/layout.jade
@@ -3,16 +3,16 @@ html( xmlns = "http://www.w3.org/1999/xhtml", lang = "en", 'xml:lang' = "en" )
     title Persian Web Toolkit
     head
         include ../includes/head
-
         link(rel='stylesheet', href='/PersianWebToolkit/css/menu.css')
         link(rel='stylesheet', href='/PersianWebToolkit/lib/prettify/theme/desert.css')
-        link(rel='stylesheet', href='/PersianWebToolkit/lib/bootstrap/css/bootstrap.css')
+        link(rel='stylesheet', href='/PersianWebToolkit/lib/bootstrap/css/bootstrap.min.css')
         link(rel='stylesheet', href='/PersianWebToolkit/css/pages.css')
+        link(rel='stylesheet', href='/PersianWebToolkit/css/over-bootstrap.css')
         block style
 
-        script(src='/PersianWebToolkit/lib/jquery/jquery-1.11.2.js')
+        script(src='/PersianWebToolkit/lib/jquery/jquery-1.11.2.min.js')
         script(src='/PersianWebToolkit/lib/prettify/prettify.js')
-        script(src='/PersianWebToolkit/lib/bootstrap/js/bootstrap.js')
+        script(src='/PersianWebToolkit/lib/bootstrap/js/bootstrap.min.js')
         script(src='/PersianWebToolkit/lib/persian-date-0.1.8b.js')
         script(src='/PersianWebToolkit/js/main.js')
         block scripts
@@ -24,4 +24,9 @@ html( xmlns = "http://www.w3.org/1999/xhtml", lang = "en", 'xml:lang' = "en" )
             block content
 
 
-        include ../includes/page.footer.jade
+        #footer_wrap.outer
+        footer.inner
+            p.copyright
+                | Persian Web Toolkit maintained by
+                a(href='https://github.com/babakhani')  Reza Babakhani
+                include ../includes/g.analic.html
