Add new Version doc

--- a/jade/page/layout.jade
+++ b/jade/page/layout.jade
@@ -5,14 +5,14 @@ html( xmlns = "http://www.w3.org/1999/xhtml", lang = "en", 'xml:lang' = "en" )
         include ../includes/head
         link(rel='stylesheet', href='/PersianWebToolkit/css/menu.css')
         link(rel='stylesheet', href='/PersianWebToolkit/lib/prettify/theme/desert.css')
-        link(rel='stylesheet', href='/PersianWebToolkit/lib/bootstrap/css/bootstrap.min.css')
+        link(rel='stylesheet', href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css')
         link(rel='stylesheet', href='/PersianWebToolkit/css/pages.css')
         link(rel='stylesheet', href='/PersianWebToolkit/css/over-bootstrap.css')
         block style
 
         script(src='/PersianWebToolkit/lib/jquery/jquery-1.11.2.min.js')
         script(src='/PersianWebToolkit/lib/prettify/prettify.js')
-        script(src='/PersianWebToolkit/lib/bootstrap/js/bootstrap.min.js')
+        script(src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js')
         script(src='/PersianWebToolkit/lib/persian-date-0.1.8b.js')
         script(src='/PersianWebToolkit/js/main.js')
         block scripts
