Add new Version doc

--- a/jade/includes/datepicker-0.3.0.html
+++ b/jade/includes/datepicker-0.3.0.html
@@ -24,13 +24,13 @@
             Page</a></p>
 
         <p>
-            <a class="direct-source-link" target="blank"
-               href="http://rawgithub.com/babakhani/pwt.datepicker/master/js/pwt-datepicker.js"><b>pwt-datepicker.js</b>
-                52
-                kb</a>
-            <a class="direct-source-link" target="blank"
-               href="http://rawgithub.com/babakhani/pwt.datepicker/master/js/pwt-datepicker.min.js"><b>pwt-datepicker.min.js </b>24
-                kb</a>
+            <!--<a class="direct-source-link" target="blank"-->
+               <!--href="http://rawgithub.com/babakhani/pwt.datepicker/master/js/pwt-datepicker.js"><b>pwt-datepicker.js</b>-->
+                <!--52-->
+                <!--kb</a>-->
+            <!--<a class="direct-source-link" target="blank"-->
+               <!--href="http://rawgithub.com/babakhani/pwt.datepicker/master/js/pwt-datepicker.min.js"><b>pwt-datepicker.min.js </b>24-->
+                <!--kb</a>-->
             <span class="direct-source-link"><b>Minify and GZip </b>6 kb</span>
         </p>
     </div>
