Add new Version doc

--- a/jade/includes/persiandate-doc-0.1.8.html
+++ b/jade/includes/persiandate-doc-0.1.8.html
@@ -25,9 +25,11 @@
 
         <p>
             <a class="direct-source-link" target="blank"
-               href="http://rawgithub.com/babakhani/PersianDate/master/pwt-date.js"><b>pwt-date.js</b> 54 kb</a>
+               href="http://rawgithub.com/babakhani/PersianDate/master/dist/0.1.8b/persian-date-0.1.8b.js"><b>pwt-date.js</b>
+                54 kb</a>
             <a class="direct-source-link" target="blank"
-               href="http://rawgithub.com/babakhani/PersianDate/master/pwt-date.min.js"><b>pwt-date.min.js </b>14 kb</a>
+               href="http://rawgithub.com/babakhani/PersianDate/master/dist/0.1.8b/persian-date-0.1.8b.min.js"><b>pwt-date.min.js </b>14
+                kb</a>
             <span class="direct-source-link"><b>Minify and GZip </b>4 kb</span>
         </p>
     </div>
@@ -44,9 +46,13 @@
                         height="30" width="170" frameborder="0" scrolling="0" style="width:170px; height: 30px;"
                         allowTransparency="true"></iframe>
             </div>
-            <a class="download-item" href="https://github.com/babakhani/PersianDate/archive/master.zip"> <span
-                    class="download-zip"></span> <span class="download-zip-title">Download Zip <span
-                    class="download-info">From Github</span></span>
+            <a class="download-item" href="https://github.com/babakhani/PersianDate/archive/master.zip">
+                <span class="download-zip"></span>
+                <span class="download-zip-title">Download Zip
+                    <span class="download-info">From Github</span>
+                    <span class="download-info">626 KB</span>
+                </span>
+
             </a>
             </a>
         </div>
