--- a/jade/includes/datepicker-0.3.0.html
+++ b/jade/includes/datepicker-0.3.0.html
@@ -25,13 +25,13 @@
 
         <p>
             <!--<a class="direct-source-link" target="blank"-->
-               <!--href="http://rawgithub.com/babakhani/pwt.datepicker/master/js/pwt-datepicker.js"><b>pwt-datepicker.js</b>-->
-                <!--52-->
-                <!--kb</a>-->
+            <!--href="http://rawgithub.com/babakhani/pwt.datepicker/master/js/pwt-datepicker.js"><b>pwt-datepicker.js</b>-->
+            <!--52-->
+            <!--kb</a>-->
             <!--<a class="direct-source-link" target="blank"-->
-               <!--href="http://rawgithub.com/babakhani/pwt.datepicker/master/js/pwt-datepicker.min.js"><b>pwt-datepicker.min.js </b>24-->
-                <!--kb</a>-->
-            <span class="direct-source-link"><b>Minify and GZip </b>6 kb</span>
+            <!--href="http://rawgithub.com/babakhani/pwt.datepicker/master/js/pwt-datepicker.min.js"><b>pwt-datepicker.min.js </b>24-->
+            <!--kb</a>-->
+            <!--<span class="direct-source-link"><b>Minify and GZip </b>6 kb</span>-->
         </p>
     </div>
     <div class="col-xs-4">
@@ -47,9 +47,13 @@
                         allowTransparency="true"></iframe>
             </div>
             <a class="download-item push-left"
-               href="https://github.com/babakhani/pwt.datepicker/archive/master.zip"> <span
-                    class="download-zip"></span> <span class="download-zip-title">Download Zip <span
-                    class="download-info">From Github</span></span>
+               href="https://github.com/babakhani/pwt.datepicker/archive/master.zip">
+                <span class="download-zip"></span>
+
+                <span class="download-zip-title">Download Zip
+                    <span class="download-info">From Github</span>
+                    <span class="download-info">1.1 MB</span>
+                </span>
             </a>
         </div>
     </div>
