--- a/jade/includes/persiandate-doc-0.1.7.html
+++ b/jade/includes/persiandate-doc-0.1.7.html
@@ -1,5 +1,3 @@
-
-
 <div class="row">
     <div class="col-xs-8 ">
         <h1>Persian Date</h1>
@@ -27,9 +25,9 @@
 
         <p>
             <a class="direct-source-link" target="blank"
-               href="http://rawgithub.com/babakhani/PersianDate/master/pwt-date.js"><b>pwt-date.js</b> 54 kb</a>
+               href="http://rawgithub.com/babakhani/PersianDate/master/dist/0.1.8b/persian-date-0.1.8b.js"><b>pwt-date.js</b> 54 kb</a>
             <a class="direct-source-link" target="blank"
-               href="http://rawgithub.com/babakhani/PersianDate/master/pwt-date.min.js"><b>pwt-date.min.js </b>14 kb</a>
+               href="http://rawgithub.com/babakhani/PersianDate/master/dist/0.1.8b/persian-date-0.1.8b.min.js"><b>pwt-date.min.js </b>14 kb</a>
             <span class="direct-source-link"><b>Minify and GZip </b>4 kb</span>
         </p>
     </div>
@@ -46,10 +44,13 @@
                         height="30" width="170" frameborder="0" scrolling="0" style="width:170px; height: 30px;"
                         allowTransparency="true"></iframe>
             </div>
-            <a class="download-item" href="https://github.com/babakhani/PersianDate/archive/master.zip"> <span
-                    class="download-zip"></span> <span class="download-zip-title">Download Zip <span
-                    class="download-info">From Github</span></span>
-            </a>
+            <a class="download-item" href="https://github.com/babakhani/PersianDate/archive/master.zip">
+                <span class="download-zip"></span>
+                <span class="download-zip-title">Download Zip
+                    <span class="download-info">From Github</span>
+                    <span class="download-info">626 KB</span>
+                </span>
+
             </a>
         </div>
     </div>
