Add new Version doc

--- a/jade/includes/datepicker-0.3.0.html
+++ b/jade/includes/datepicker-0.3.0.html
@@ -66,7 +66,7 @@
 <h3>Dependency </h3>
 <div class="well">
     <a href="http://jquery.org">jquery.js</a>1.4 &#62; |
-    <a href="js/pwt-date.js" download="pwt-date.js">pwt.date.js </a>0.1.6 &#62;
+    <a href="https://github.com/babakhani/PersianDate" download="pwt-date.js">persian.date.js </a>0.1.6 &#62;
 </div>
 
 
