--- a/jade/includes/persiandate-doc-0.1.8.html
+++ b/jade/includes/persiandate-doc-0.1.8.html
@@ -25,10 +25,12 @@
 
         <p>
             <a class="direct-source-link" target="blank"
-               href="http://rawgithub.com/babakhani/PersianDate/master/dist/0.1.8b/persian-date-0.1.8b.js"><b>pwt-date.js</b>
+               href="http://rawgithub.com/babakhani/PersianDate/master/dist/0.1.8b/persian-date-0.1.8b.js"><b>
+                persian-date-0.1.8b.js</b>
                 54 kb</a>
             <a class="direct-source-link" target="blank"
-               href="http://rawgithub.com/babakhani/PersianDate/master/dist/0.1.8b/persian-date-0.1.8b.min.js"><b>pwt-date.min.js </b>14
+               href="http://rawgithub.com/babakhani/PersianDate/master/dist/0.1.8b/persian-date-0.1.8b.min.js"><b>
+                persian-date-0.1.8b.min.js </b>14
                 kb</a>
             <span class="direct-source-link"><b>Minify and GZip </b>4 kb</span>
         </p>
