Add new Version doc

--- a/jade/includes/datepicker-0.3.0.html
+++ b/jade/includes/datepicker-0.3.0.html
@@ -47,7 +47,7 @@
                         allowTransparency="true"></iframe>
             </div>
             <a class="download-item push-left"
-               href="https://github.com/babakhani/pwt.datepicker/archive/master.zip">
+               href="https://github.com/babakhani/pwt.datepicker/archive/0.3.0.zip">
                 <span class="download-zip"></span>
 
                 <span class="download-zip-title">Download Zip
