--- a/jade/includes/persiandate-doc-0.1.8.html
+++ b/jade/includes/persiandate-doc-0.1.8.html
@@ -48,7 +48,7 @@
                         height="30" width="170" frameborder="0" scrolling="0" style="width:170px; height: 30px;"
                         allowTransparency="true"></iframe>
             </div>
-            <a class="download-item" href="https://github.com/babakhani/PersianDate/archive/master.zip">
+            <a class="download-item" href="https://github.com/babakhani/PersianDate/archive/0.1.8b.zip">
                 <span class="download-zip"></span>
                 <span class="download-zip-title">Download Zip
                     <span class="download-info">From Github</span>
