Add new Version doc

--- a/jade/includes/datepicker-0.3.0.html
+++ b/jade/includes/datepicker-0.3.0.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-xs-8 ">
         <h1>Persian Date Picker</h1>
-        <span class="label label-warning">Beta Version 0.3.0</span>
+        <span class="label label-success">Version 0.3.0</span>
 
         <p>
             This Date picker work with Iranian calendar.
