--- a/jade/includes/persiandate-doc-0.1.8.html
+++ b/jade/includes/persiandate-doc-0.1.8.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-xs-8 ">
         <h1>Persian Date</h1>
-        <span class="label label-warning">Beta Version 0.1.8</span>
+        <span class="label label-success">Version 0.1.8</span>
 
         <h2> javascript date library for parsing, validating, manipulating, and formatting <strong>persian
             dates</strong>
