Add new Version doc

--- a/css/pages.css
+++ b/css/pages.css
@@ -736,3 +736,13 @@ pre .keyword {
 
 }
 
+/*
+    Options Table
+*/
+
+.table-plugin-options .indent{
+    display: block;
+    width:15px;
+    height:30px;
+    float:left;
+}
