Add new Version doc

--- a/jade/includes/datepicker-0.3.0.html
+++ b/jade/includes/datepicker-0.3.0.html
@@ -358,7 +358,7 @@
 
 <tr>
     <td><div class="indent"></div>onNext</td>
-    <td>event / function</td>
+    <td>event</td>
     <td>--</td>
     <td>
         Trigger When Next button clicked
@@ -367,7 +367,7 @@
 
 <tr>
     <td><div class="indent"></div>onPrev</td>
-    <td>event / function</td>
+    <td>event</td>
     <td>--</td>
     <td>
         Trigger When Prev button clicked
@@ -376,7 +376,7 @@
 
 <tr>
     <td><div class="indent"></div>onSwitch</td>
-    <td>event / function</td>
+    <td>event</td>
     <td>--</td>
     <td>
         Trigger When Switch button clicked
@@ -414,7 +414,7 @@
 </tr>
 <tr>
     <td><div class="indent"></div>onToday</td>
-    <td>event / function</td>
+    <td>event</td>
     <td>--</td>
     <td>
         Trigger When Today Button Clicked
@@ -460,7 +460,7 @@
 
 <tr>
     <td><div class="indent"></div>onSelect</td>
-    <td>event / function</td>
+    <td>event</td>
     <td>--</td>
     <td>
           Trigger When Date Select
@@ -505,7 +505,7 @@
 
 <tr>
     <td><div class="indent"></div>onSelect</td>
-    <td>event / function</td>
+    <td>event</td>
     <td>--</td>
     <td>
         Trigger When Month Select
@@ -549,7 +549,7 @@
 </tr>
 <tr>
     <td><div class="indent"></div>onSelect</td>
-    <td>event / function</td>
+    <td>event</td>
     <td>--</td>
     <td>
         Trigger When Year Select
