--- a/css/pages.css
+++ b/css/pages.css
@@ -739,10 +739,13 @@ pre .keyword {
 /*
     Options Table
 */
-
+.table-plugin-options{
+    font-size:14px;
+}
 .table-plugin-options .indent{
     display: block;
-    width:15px;
+    width:25px;
     height:30px;
     float:left;
+
 }
